Bug 431651 - Systemsettings crashes in ComponentChooser::load() when you open "Default Applications"
Summary: Systemsettings crashes in ComponentChooser::load() when you open "Default App...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_componentchooser (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: VHI normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2021-01-15 18:39 UTC by Victor Ryzhykh
Modified: 2021-01-18 01:11 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
log (18.33 KB, text/plain)
2021-01-16 15:34 UTC, Victor Ryzhykh
Details
new log (18.99 KB, text/plain)
2021-01-16 16:00 UTC, Victor Ryzhykh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Victor Ryzhykh 2021-01-15 18:39:28 UTC
At the moment, if the system does not have a single installed program from tab "Default Applications", for example "Web browser" or "Email client", the "Systemsettings" window simply crashes by the.

If, for example, the mail program is not installed, then you can add the line "/usr/share/applications/mimeinfo.cache" to the file "x-scheme-handler/mailto=thunderbird.desktop;", and then «Systemsettings» will not fall.

This happens on OS Neon Developer Edition and Rosa.

Operating System: ROSA Desktop Fresh R12 2019.1
KDE Plasma Version: 5.20.80
KDE Frameworks Version: 5.78.0
Qt Version: 5.15.2
Kernel Version: 5.10.7-generic-1rosa2019.1-x86_64
OS Type: 64-bit
Processors: 4 × Intel® Core™ i5-3230M CPU @ 2.60GHz
Memory: 15.1 ГиБ of RAM
Graphics Processor: Mesa DRI Intel® HD Graphics 4000
Comment 1 Nate Graham 2021-01-15 21:10:38 UTC
Can you attach a backtrace of the crash, please? See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
Comment 2 Victor Ryzhykh 2021-01-16 05:29:34 UTC
If the mail program is not installed.

victor@localhost ~ $ systemsettings5 
kf.coreaddons: Two plugins with the same interface( QObject ) were registered. Use keywords to identify the plugins.
kf.service.services: KApplicationTrader: mimeType "x-scheme-handler/mailto" not found
KCrash: Application 'systemsettings5' crashing...
KCrash: Attempting to start /usr/lib64/libexec/drkonqi

[1]+  Остановлен    systemsettings5
victor@localhost ~ $ 


If a web browser is not installed.

victor@localhost ~ $ systemsettings5 
kf.coreaddons: Two plugins with the same interface( QObject ) were registered. Use keywords to identify the plugins.
kf.service.services: KApplicationTrader: mimeType "x-scheme-handler/http" not found
KCrash: Application 'systemsettings5' crashing...
KCrash: Attempting to start /usr/lib64/libexec/drkonqi

[1]+  Остановлен    systemsettings5
victor@localhost ~ $
Comment 3 Nate Graham 2021-01-16 15:08:30 UTC
Can you attach a backtrace please?
Comment 4 Victor Ryzhykh 2021-01-16 15:34:36 UTC
Created attachment 134936 [details]
log

(In reply to Nate Graham from comment #3)
> Can you attach a backtrace please?

I would be glad, but I have never done this, and I do not know how to do this.

In the "Information for the developer" window, it is written this
Comment 5 Victor Ryzhykh 2021-01-16 16:00:47 UTC
Created attachment 134938 [details]
new log

Installed the "dbgsym" packages required for output
Comment 6 Nate Graham 2021-01-16 16:12:12 UTC
Please see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports. I can answer questions if anything is unclear.
Comment 7 Nate Graham 2021-01-16 16:14:03 UTC
(In reply to Victor Ryzhykh from comment #5)
> Created attachment 134938 [details]
> new log
> 
> Installed the "dbgsym" packages required for output
Ah there we go, thanks. Pasting it here:

Thread 1 (Thread 0x7f87e769a8c0 (LWP 11154)):
[KCrash Handler]
#4  0x00007f87c86fa1cb in ComponentChooser::load (this=0x5563c35a8c10) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qlist.h:117
#5  0x00007f87c86f6a78 in KcmComponentChooser::KcmComponentChooser (this=0x5563c349f9c0, parent=<optimized out>, args=...) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qlist.h:160
#6  0x00007f87c86f78de in KPluginFactory::createInstance<KcmComponentChooser, QObject> (parentWidget=<optimized out>, parent=<optimized out>, args=...) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qobject.h:519
#7  0x00007f87ec287362 in KPluginFactory::create (this=this@entry=0x5563c2dbe0b0, iface=0x7f87ed7780f0 "KQuickAddons::ConfigModule", parentWidget=parentWidget@entry=0x0, parent=parent@entry=0x0, args=..., keyword=...) at ./src/lib/plugin/kpluginfactory.cpp:183
#8  0x00007f87ed897ba8 in KPluginFactory::create<KQuickAddons::ConfigModule> (args=..., parent=0x0, this=0x5563c2dbe0b0) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qarraydata.h:257
#9  KCModuleLoader::loadModule (mod=..., report=report@entry=KCModuleLoader::Inline, parent=0x5563c2e54680, args=...) at ./src/kcmoduleloader.cpp:94
#10 0x00007f87ed8a369a in KCModuleProxyPrivate::loadModule (this=this@entry=0x5563c2e54620) at ./src/kcmoduleproxy.cpp:81
#11 0x00007f87ed8a3cd8 in KCModuleProxy::realModule (this=this@entry=0x5563c2e54680) at ./src/kcmoduleproxy.cpp:54
#12 0x00007f87ed8a4267 in KCModuleProxy::showEvent (this=0x5563c2e54680, ev=0x7ffeb836bd70) at ./src/kcmoduleproxy.cpp:137
#13 0x00007f87ecbd1c06 in QWidget::event (this=0x5563c2e54680, event=0x7ffeb836bd70) at kernel/qwidget.cpp:8663
#14 0x00007f87ecb8edc3 in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x5563c2e54680, e=0x7ffeb836bd70) at kernel/qapplication.cpp:3632
#15 0x00007f87ecb97bb8 in QApplication::notify(QObject*, QEvent*) () at kernel/qapplication.cpp:3156
#16 0x00007f87ebf9069a in QCoreApplication::notifyInternal2 (receiver=0x5563c2e54680, event=0x7ffeb836bd70) at ../../include/QtCore/5.15.2/QtCore/private/../../../../../src/corelib/thread/qthread_p.h:325
#17 0x00007f87ecbce5b7 in QWidgetPrivate::show_helper (this=0x5563c2e0d850) at kernel/qwidget.cpp:7813
#18 0x00007f87ecbce38f in QWidgetPrivate::show_recursive (this=<optimized out>) at kernel/qwidget.cpp:7692
#19 0x00007f87ecbce519 in QWidgetPrivate::showChildren (this=this@entry=0x5563c2e408a0, spontaneous=spontaneous@entry=false) at ../../include/QtWidgets/../../src/widgets/kernel/qwidget.h:132
#20 0x00007f87ecbce593 in QWidgetPrivate::show_helper (this=this@entry=0x5563c2e408a0) at kernel/qwidget.cpp:7768
#21 0x00007f87ecbd16a3 in QWidgetPrivate::setVisible (this=0x5563c2e408a0, visible=<optimized out>) at kernel/qwidget.cpp:8111
#22 0x00007f87ecbce501 in QWidgetPrivate::showChildren (this=this@entry=0x5563c2953fc0, spontaneous=spontaneous@entry=false) at kernel/qwidget.cpp:8183
#23 0x00007f87ecbce593 in QWidgetPrivate::show_helper (this=this@entry=0x5563c2953fc0) at kernel/qwidget.cpp:7768
#24 0x00007f87ecbd16a3 in QWidgetPrivate::setVisible (this=0x5563c2953fc0, visible=<optimized out>) at kernel/qwidget.cpp:8111
#25 0x00007f87ecbb6134 in QStackedLayout::setCurrentIndex (this=0x5563c2ad0df0, index=2) at kernel/qstackedlayout.cpp:321
#26 0x00007f87ecbb63dd in QStackedLayout::setCurrentWidget (this=0x5563c2ad0df0, widget=widget@entry=0x5563c2b134f0) at kernel/qstackedlayout.cpp:376
#27 0x00007f87ecd48879 in QStackedWidget::setCurrentWidget (this=<optimized out>, widget=0x5563c2b134f0) at widgets/qstackedwidget.cpp:248
#28 0x00007f87ed39494c in KPageViewPrivate::_k_pageSelected (previous=..., index=..., this=0x5563c2a63550) at ./src/kpageview.cpp:247
#29 KPageViewPrivate::_k_pageSelected (this=0x5563c2a63550, index=..., previous=...) at ./src/kpageview.cpp:221
#30 0x00007f87ebfc76f0 in doActivate<false> (sender=0x5563c2aca340, signal_index=3, argv=0x7ffeb836c2d0) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:395
#31 0x00007f87ebfc0a87 in QMetaObject::activate (sender=sender@entry=0x5563c2aca340, m=m@entry=0x7f87ec229140 <QItemSelectionModel::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7ffeb836c2d0) at kernel/qobject.cpp:3946
#32 0x00007f87ebf41874 in QItemSelectionModel::selectionChanged (this=this@entry=0x5563c2aca340, _t1=..., _t2=...) at .moc/moc_qitemselectionmodel.cpp:475
#33 0x00007f87ebf46fcb in QItemSelectionModel::emitSelectionChanged (this=0x5563c2aca340, newSelection=..., oldSelection=...) at itemmodels/qitemselectionmodel.cpp:1942
#34 0x00007f87ebf4a682 in QItemSelectionModel::select (this=0x5563c2aca340, selection=..., command=...) at itemmodels/qitemselectionmodel.cpp:1340
#35 0x00007f87ece43914 in QListView::setSelection (this=<optimized out>, rect=..., command=...) at /usr/include/c++/9/bits/atomic_base.h:413
#36 0x00007f87ece065ba in QAbstractItemView::mousePressEvent(QMouseEvent*) () at ../../include/QtCore/../../src/corelib/tools/qsize.h:140
#37 0x00007f87ecbd1c21 in QWidget::event (this=this@entry=0x5563c2cfb740, event=event@entry=0x7ffeb836cd50) at kernel/qwidget.cpp:8641
#38 0x00007f87ecc81f82 in QFrame::event (this=0x5563c2cfb740, e=0x7ffeb836cd50) at widgets/qframe.cpp:550
#39 0x00007f87ece0c5b2 in QAbstractItemView::viewportEvent (this=0x5563c2cfb740, event=0x7ffeb836cd50) at itemviews/qabstractitemview.cpp:1746
#40 0x00007f87ebf90403 in QCoreApplicationPrivate::sendThroughObjectEventFilters (event=<optimized out>, receiver=<optimized out>) at kernel/qcoreapplication.cpp:1189
#41 QCoreApplicationPrivate::sendThroughObjectEventFilters (receiver=receiver@entry=0x5563c2cbc670, event=event@entry=0x7ffeb836cd50) at kernel/qcoreapplication.cpp:1178
#42 0x00007f87ecb8edb2 in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x5563c2cbc670, e=0x7ffeb836cd50) at kernel/qapplication.cpp:3626
#43 0x00007f87ecb97e77 in QApplication::notify(QObject*, QEvent*) () at kernel/qapplication.cpp:3076
#44 0x00007f87ebf9069a in QCoreApplication::notifyInternal2 (receiver=0x5563c2cbc670, event=0x7ffeb836cd50) at ../../include/QtCore/5.15.2/QtCore/private/../../../../../src/corelib/thread/qthread_p.h:325
#45 0x00007f87ecb970a7 in QApplicationPrivate::sendMouseEvent (receiver=0x5563c2cbc670, event=0x7ffeb836cd50, alienWidget=0x5563c2cbc670, nativeWidget=0x5563c28a83d0, buttonDown=<optimized out>, lastMouseReceiver=..., spontaneous=true, onlyDispatchEnterLeave=false) at kernel/qapplication.cpp:2614
#46 0x00007f87ecbece54 in QWidgetWindow::handleMouseEvent(QMouseEvent*) () at /usr/include/c++/9/bits/atomic_base.h:413
#47 0x00007f87ecbf0174 in QWidgetWindow::event (this=0x5563c28b7930, event=0x7ffeb836d1d0) at kernel/qwidgetwindow.cpp:300
#48 0x00007f87ecb8edc3 in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x5563c28b7930, e=0x7ffeb836d1d0) at kernel/qapplication.cpp:3632
#49 0x00007f87ecb97bb8 in QApplication::notify(QObject*, QEvent*) () at kernel/qapplication.cpp:3156
#50 0x00007f87ebf9069a in QCoreApplication::notifyInternal2 (receiver=0x5563c28b7930, event=0x7ffeb836d1d0) at ../../include/QtCore/5.15.2/QtCore/private/../../../../../src/corelib/thread/qthread_p.h:325
#51 0x00007f87ec4994e8 in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () at kernel/qguiapplication.cpp:2282
#52 0x00007f87ec49ab55 in QGuiApplicationPrivate::processWindowSystemEvent (e=0x5563c3139f60) at kernel/qguiapplication.cpp:2002
#53 0x00007f87ec4727ac in QWindowSystemInterface::sendWindowSystemEvents (flags=flags@entry=...) at kernel/qwindowsysteminterface.cpp:1169
#54 0x00007f87e7011d7e in xcbSourceDispatch (source=<optimized out>) at qxcbeventdispatcher.cpp:105
#55 0x00007f87e9b5efbd in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#56 0x00007f87e9b5f240 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#57 0x00007f87e9b5f2e3 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#58 0x00007f87ebfeafa2 in QEventDispatcherGlib::processEvents (this=0x5563c26c5be0, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#59 0x00007f87ebf8f1ab in QEventLoop::exec (this=this@entry=0x7ffeb836d570, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:141
#60 0x00007f87ebf97354 in QCoreApplication::exec () at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#61 0x00005563c24fd372 in main (argc=<optimized out>, argv=<optimized out>) at ./app/main.cpp:209
[Inferior 1 (process 11154) detached]
Comment 8 Nicolas Fella 2021-01-18 00:10:22 UTC
Backtrace with more detail:

Application: Systemeinstellungen (systemsettings5), signal: Aborted
Content of s_kcrashErrorMessage: [Current thread is 1 (Thread 0x7fa4b196a880 (LWP 284744))]
[KCrash Handler]
#5  0x00007fa4b4bf2615 in raise () from /usr/lib/libc.so.6
#6  0x00007fa4b4bdb862 in abort () from /usr/lib/libc.so.6
#7  0x00007fa4b519fc51 in qt_message_fatal (message=<synthetic pointer>..., context=...) at global/qlogging.cpp:1914
#8  QMessageLogger::fatal (this=this@entry=0x7ffebcf9ca98, msg=msg@entry=0x7fa4b549cf10 "ASSERT failure in %s: \"%s\", file %s, line %d") at global/qlogging.cpp:893
#9  0x00007fa4b519f0a6 in qt_assert_x (where=<optimized out>, what=<optimized out>, file=<optimized out>, line=<optimized out>) at global/qglobal.cpp:3366
#10 0x00007fa48dd769f9 in QList<QVariant>::operator[] (this=0x559312accfb0, i=7733295) at /home/nico/kde/usr/include/QtCore/qlist.h:579
#11 0x00007fa48dd74947 in ComponentChooser::load (this=0x559312accfa0) at /home/nico/kde/src/plasma-desktop/kcms/componentchooser/componentchooser.cpp:94
#12 0x00007fa48dd7b3ca in ComponentChooserData::load (this=0x559312acfaa0) at /home/nico/kde/src/plasma-desktop/kcms/componentchooser/componentchooserdata.cpp:40
#13 0x00007fa48dd7b378 in ComponentChooserData::ComponentChooserData (this=0x559312acfaa0, parent=0x559312acea80, args=...) at /home/nico/kde/src/plasma-desktop/kcms/componentchooser/componentchooserdata.cpp:34
#14 0x00007fa48dd723a1 in KcmComponentChooser::KcmComponentChooser (this=0x559312acea80, parent=0x0, args=...) at /home/nico/kde/src/plasma-desktop/kcms/componentchooser/kcm_componentchooser.cpp:37
#15 0x00007fa48dd73779 in KPluginFactory::createInstance<KcmComponentChooser, QObject> (parentWidget=0x0, parent=0x0, args=...) at /home/nico/kde/usr/include/KF5/KCoreAddons/kpluginfactory.h:699
Comment 9 Bug Janitor Service 2021-01-18 01:03:56 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/304
Comment 10 Tobias Fella 2021-01-18 01:11:12 UTC
Git commit e255ccfa23d70533d9022ec670453eb36f2f2b09 by Tobias Fella.
Committed on 18/01/2021 at 01:01.
Pushed by nicolasfella into branch 'master'.

kcm/componentchooser: fix crash when no applications installed

M  +1    -1    kcms/componentchooser/componentchooser.cpp
M  +1    -1    kcms/componentchooser/componentchooser.h

https://invent.kde.org/plasma/plasma-desktop/commit/e255ccfa23d70533d9022ec670453eb36f2f2b09