kcm/componentchooser: fix crash when no applications installed

BUG: 431651